# your_robot_bringup

./: CLAUDE.md  package.xml
launch/: master_bringup.launch.py
launch/localization/: robot_localization.launch.py
launch/sensors/: realsense.launch.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: ekf.yaml  nav2_params.yaml
my_robot_bringup/launch/: autonomous_navigation.launch.py  navigation.launch.py  perception.launch.py  robot_navigation_launch.py  robot_navigation_simple.launch.py  test_vslam.launch.py  vslam_fix.launch.py  vslam_optimized.launch.py  vslam_with_tf.launch.py
your_robot_bringup/: CMakeLists.txt  QUICK_START.md  README.md  verify_system.sh
your_robot_bringup/config/: ekf.yaml  nav2_params.yaml
your_robot_bringup/launch/: master_bringup.launch.py
your_robot_bringup/launch/navigation/: nav2.launch.py
your_robot_bringup/launch/perception/: nvblox.launch.py  vslam.launch.py
your_robot_bringup/launch/sensors/: depthimage_to_laserscan.launch.py  realsense.launch.py
your_robot_bringup/launch/visualization/: rviz2.launch.py
your_robot_bringup/rviz/: isaac_navigation.rviz
