<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>your_robot_bringup</name>
  <version>1.0.0</version>
  <description>Complete navigation stack with Isaac ROS, RealSense, and Nav2</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  
  <!-- Sensor dependencies -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  
  <!-- Isaac ROS dependencies -->
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>isaac_ros_nvblox</exec_depend>
  <exec_depend>nvblox_ros</exec_depend>
  <exec_depend>nvblox_msgs</exec_depend>
  
  <!-- Localization dependencies -->
  <exec_depend>robot_localization</exec_depend>
  
  <!-- Navigation dependencies -->
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  
  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  
  <!-- Utilities -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_tools</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
